# market-prediction

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/: api-client.md  api-endpoint.md  component.md  db-model.md  error-handling.md  lmsr.md  migration.md  test.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241203_000001_create_users_table.py  20241212_000001_extend_users_table.py  20241224_000001_create_categories_table.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  categories.py
backend/app/core/: auth.py  config.py  error_handlers.py  exceptions.py  lmsr.py  rbac.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  category.py  user.py
backend/app/schemas/: __init__.py  category.py
backend/app/scripts/: seed_categories.py
backend/tests/: test_auth.py  test_category.py  test_exceptions.py  test_lmsr.py  test_main.py  test_migrations.py  test_rbac.py  test_user_model.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthProvider.tsx  Header.tsx  RoleGate.tsx
frontend/lib/api/: auth.ts  client.ts
frontend/lib/store/: auth.ts
frontend/types/: auth.ts
prompt/: PLAN.md  PROMPT.md  SPEC.md
